# CELERY_DJANGO_EXAMPLE

./: .env.template  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
src/: Dockerfile  pyproject.toml
src/celery_example/: asgi.py  celery.py  config.py  settings.py  urls.py  wsgi.py
src/main_app/: models.py  service.py  tasks.py  urls.py  views.py
src/main_app/templates/: contact.html
